--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=trp;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=wh0!$@!ph@
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
