--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+server.port=8080
+
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=trp;trustServerCertificate=true
 spring.datasource.username=alvi
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+### JWT
+jwt.app.jwtExpirationMs=76300000
+jwt.app.jwtSecret=knowledgeFactory
