--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.main.allow-bean-definition-overriding=true
 ### JWT
 jwt.app.jwtExpirationMs=76300000
 jwt.app.jwtSecret=knowledgeFactory
+
+###
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db.changelog/changelog-master.xml
