--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 server.port=8080
 
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=trp;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=wh0!$@!ph@
+
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=trp;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=wh0!$@!ph@
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/trp;trustServerCertificate=true
+spring.datasource.username=admin
+spring.datasource.password=admin@uth
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
