--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ jwt.app.jwtSecret=knowledgeFactory
 ###
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db.changelog/changelog-master.xml
+
+### values
+etin.base-url=http://103.92.84.243/
+etin.token-url=api/Auth/token
+etin.tin-url=api/DPDC/1.0/getTinInfo?type=TIN&value=
+etin.username = ''
+etin.password = ''
