--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,5 @@ spring.liquibase.change-log=classpath:db.changelog/changelog-master.xml
 etin.base-url=http://103.92.84.243/
 etin.token-url=api/Auth/token
 etin.tin-url=api/DPDC/1.0/getTinInfo?type=TIN&value=
-etin.username = 'admin@dpdc.com'
-etin.password = '1234'
+etin.username=admin@dpdc.com
+etin.password=1234
