--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,9 @@ etin.token-url=api/Auth/token
 etin.tin-url=api/DPDC/1.0/getTinInfo?type=TIN&value=
 etin.username=admin@dpdc.com
 etin.password=1234
+
+trpereturn.base-url=http://103.92.85.227:4000/
+trpereturn.systoken=authenticationservice/v2/api/authenticate/trp
+trpereturn.usertoken=filingservice/v2/api/trp/generate_access_token
+trpereturn.username=TRP_SYSTEM_ACC
+trpereturn.password=trp%admin$sudo
