--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,8 @@ trpereturn.systoken=authenticationservice/v2/api/authenticate/trp
 trpereturn.usertoken=filingservice/v2/api/trp/generate_access_token
 trpereturn.username=TRP_SYSTEM_ACC
 trpereturn.password=trp%admin$sudo
+
+otp.base-url=http://103.92.84.246:777/
+otp.otpsend-url=syn_sms_gw/index.php?
+otp.username=trp
+otp.password=trp@12345
