--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=trp;trustServerCertificate=true
+#spring.datasource.url=jdbc:sqlserver://114.130.118.125 ;databaseName=trpdb;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost ;databaseName=trp;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=wh0!$@!ph@
 spring.jpa.show-sql=true
