--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://114.130.118.125 ;databaseName=trpdb;trustServerCertificate=true
-spring.datasource.url=jdbc:sqlserver://localhost ;databaseName=trp;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://114.130.118.125 ;databaseName=trpdb;trustServerCertificate=true
+#spring.datasource.url=jdbc:sqlserver://localhost ;databaseName=trp;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=wh0!$@!ph@
 spring.jpa.show-sql=true
@@ -36,7 +36,7 @@ trpereturn.base-url=http://103.92.85.227:4000/
 trpereturn.systoken=authenticationservice/v3/api/authenticate/trp
 trpereturn.usertoken=filingservice/v3/api/trp/generate_access_token
 trpereturn.username=TRP_SYSTEM_ACC
-trpereturn.password=trp%admin$sudo
+trpereturn.password=Rp%tUS$do
 
 otp.base-url=http://103.92.84.246:777/
 otp.otpsend-url=syn_sms_gw/index.php?
