--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://114.130.118.125 ;databaseName=trpdb;trustServerCertificate=true
-#spring.datasource.url=jdbc:sqlserver://localhost ;databaseName=trp;trustServerCertificate=true
+#spring.datasource.url=jdbc:sqlserver://114.130.118.125 ;databaseName=trpdb;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost ;databaseName=trp;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=wh0!$@!ph@
 spring.jpa.show-sql=true
@@ -42,3 +42,6 @@ otp.base-url=http://103.92.84.246:777/
 otp.otpsend-url=syn_sms_gw/index.php?
 otp.username=trp
 otp.password=trp@12345
+
+own.base-url=http://localhost:4200/
+#own.base-url=http://114.130.118.118/
