--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ trpereturn.usertoken=filingservice/v3/api/trp/generate_access_token
 trpereturn.username=TRP_SYSTEM_ACC
 trpereturn.password=Rp%tUS$do
 
+trpereturn.live-base-url=https://api.etaxnbr.gov.bd/
+trpereturn.psr=filingservice/v3/api/return-verification/
+
 otp.base-url=http://103.92.84.246:777/
 otp.otpsend-url=syn_sms_gw/index.php?
 otp.username=trp
